<resources>
    <string name="app_name">Dsc Assignment</string>
    <string name="logo">Logo</string>
    <string name="logo_here">Logo Here</string>
    <string name="john45_gmail_com">john45@gmail.com</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="login_with_facebook">Login With Facebook</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Dont have an account?</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="john">john</string>
    <string name="back">Back</string>
    <string name="last_name">Last Name</string>
    <string name="string_back" />
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="forgot_password_caps">FORGOT PASSWORD</string>
    <string name="submit">Submit</string>
    <string name="reset_password">Reset Password</string>
    <string name="change_password_statement">Enter Your Email address associated with your account we will send you a link to reset your password</string>
    <string name="error">Please enter your name!</string>
    <string name="email_1">Email cannot be blank!</string>
    <string name="invalid">Invalid Email</string>
    <string name="pass">Please enter your password</string>
    <string name="pass2">Please Confirm Your Password</string>
    <string name="pass3">Please check your password</string>
</resources>