<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="55dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back"
            app:tint="@color/black"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/string_back" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_caps"
            android:textStyle="bold"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/black"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:overScrollMode="never">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:contentDescription="@string/reset_password"
                android:src="@drawable/forgot"
                android:layout_marginTop="55dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter Your Email address associated \n
 with your account
 we will send you \n     a link to reset your password"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/input_bg"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_email"
                android:padding="10dp"
                android:textSize="16sp"
                android:layout_marginEnd="50dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="20dp"
                android:hint="@string/john45_gmail_com"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                android:autofillHints=""/>
            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="50sp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="50dp"
                android:background="@drawable/input_bg"
                android:text="@string/submit"
                android:textStyle="bold"
                android:textSize="17sp"
                app:backgroundTint="@color/colorSplash" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>